--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "chalk": "4.1.2",
     "date-fns-tz": "^2.0.1",
     "dayjs": "^1.11.1",
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.12.1",
     "dotenv": "^16.0.3",
     "glob": "7.2.0",
     "https": "^1.0.0",
     "mongoose": "^6.7.2",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "rss-parser": "^3.12.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.6.2"
   }
 }
