--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "18.x"
+    "node": ">=18.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,18 +12,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
+    "canvas": "^2.11.2",
     "chalk": "4.1.2",
+    "chart.js": "^3.5.1",
+    "chartjs-node-canvas": "^4.1.6",
+    "cohere-ai": "^7.10.6",
+    "csv-writer": "^1.6.0",
     "date-fns-tz": "^2.0.1",
     "dayjs": "^1.11.1",
-    "discord.js": "^14.12.1",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.0.3",
+    "express": "^4.19.2",
     "glob": "7.2.0",
     "https": "^1.0.0",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^6.7.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "openai": "^4.52.3",
     "rss-parser": "^3.12.0",
+    "spotify-web-api-node": "^5.0.2",
     "xml2js": "^0.6.2"
   }
 }
